kubernetes/grafana/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: grafana
  template:
    metadata:
      labels:
        task: monitoring
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /var
          name: grafana-storage
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-storage
