kubernetes/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana
  annotations:
    ak-type: simple
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: grafana.png

spec:
  tls:
  - hosts:
    - grafana.k.oneill.net
    secretName: grafana-tls
  rules:
  - host: grafana.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  ingressClassName: nginx
